--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -111,34 +111,52 @@ button.no-background:hover {
 button.option-btn {
 	background-color: #888889;
 /* 	border: 1px solid #838596; */
-	border-radius: 1px; 
+	border-radius: 0px; 
 	color : white;
 }
 button.option-btn:hover {
 	color: white;
 	background-color: #888889;
 /* 	border: 1px solid #7c977f; */
-	border-radius: 1px;
+	border-radius: 0px;
 	
 	opacity:0.85;
 	filter:alpha(opacity=85); /* For IE8 and earlier */ 
 }
 button.option-btn-selected {
-	background-color: #6a916f;
-/* 	border: 1px solid #838596; */
-	border-radius: 1px; 
-	color : white;
+	
+	background-color: rgba(109, 144, 102, 0.7);
+    border: 1px solid rgba(91, 143, 82,.2);
+    border-radius: 0px;
+    color: white;
 }
 button.option-btn-selected:hover {
 	background-color: #6a916f;
 	color: white;
 /* 	border: 1px solid #7c977f; */
-	border-radius: 1px;
-	
+	border-radius: 0px;
+	border: 1px solid rgba(91, 143, 82,.2);
 	opacity:0.85;
 	filter:alpha(opacity=85); /* For IE8 and earlier */ 
 }
+/**
+ button action 
+*/
 
+button.btn-action,
+button.btn-action:focus,
+button.btn-action:active{
+    background-color: rgba(88, 105, 130, 0.5);
+    border-radius: 0px;
+    border: 1px solid rgba(101, 113, 134, 0.25);
+    letter-spacing: 0.05em;
+    font-weight: 100 !important;
+    transition: background-color 0.25s cubic-bezier(0.25, 0.2, 0.63, 0.37);
+}
+button.btn-action:hover {
+	background-color: rgba(82, 102, 130, 0.95);
+    transition: background-color 0.25s cubic-bezier(0.25, 0.2, 0.63, 0.37);
+}
 /**
 Filter button 
 */
@@ -1226,6 +1244,9 @@ table.import-csv-table input[type=checkbox] {
 .height25 {
 	height: 25%;
 }
+.height30 {
+	height: 30%;
+}
 .height33 {
 	height: 33%;
 }
@@ -1263,17 +1284,18 @@ table.import-csv-table input[type=checkbox] {
 * Dialog
 */
 .dialog {
-	background: white;
-	padding: 5px 10px 5px 10px;
-/* 	max-width: 400px; */
-	min-height: 10em;
-	min-width: 20em;
-	padding-top: 1.4em;
-	border-radius: 15px;
-	-webkit-box-shadow: 8px 8px 7px 2px rgba(149,165,166,0.68);
-	-moz-box-shadow: 8px 8px 7px 2px rgba(149,165,166,0.68);
-	box-shadow: 8px 8px 7px 2px rgba(149,165,166,0.68);
-	text-align: center;
+    background: rgb(60, 82, 113);
+    padding: 5px 10px 5px 10px;
+    /* max-width: 400px; */
+    min-height: 10em;
+    min-width: 20em;
+    padding-top: 1.4em;
+    border-radius: 6px;
+    /* -webkit-box-shadow: 8px 8px 7px 2px rgba(149,165,166,0.68); */
+/*     -moz-box-shadow: 8px 8px 7px 2px rgba(149,165,166,0.68); */
+    /* box-shadow: 8px 8px 7px 2px rgba(149,165,166,0.68); */
+    text-align: center;
+    color: white;
 }
 
 .dialog .content {
