--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -34,6 +34,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 /*
 * Buttons
 */
+button {
+	white-space: normal !important;
+}
 button.btn{
 	color: #FFF;
 }
@@ -108,30 +111,32 @@ button.no-background:hover {
 	border: none;
 }
 /** Option-btn default style for not selected*/
-button.option-btn {
-	background-color: #888889;
-/* 	border: 1px solid #838596; */
-	border-radius: 0px; 
-	color : white;
+button.option-btn ,
+button.option-btn:focus ,
+button.option-btn:active {
+    background-color: rgba(59, 59, 64, 0.90);
+    border: 1px solid rgba(59, 59, 60, 0.35);
+    border-radius: 0px;
+    color: white;
 }
 button.option-btn:hover {
 	color: white;
-	background-color: #888889;
-/* 	border: 1px solid #7c977f; */
+	background-color: rgba(64, 64, 70, .8);
+	border: 1px solid rgba(59, 59, 60, 0.2);
 	border-radius: 0px;
-	
-	opacity:0.85;
-	filter:alpha(opacity=85); /* For IE8 and earlier */ 
+/* 	opacity:0.85; */
 }
-button.option-btn-selected {
+button.option-btn-selected ,
+button.option-btn-selected:focus ,
+button.option-btn-selected:active {
 	
-	background-color: rgba(109, 144, 102, 0.7);
+	background-color: rgba(97, 123, 92, 0.7);
     border: 1px solid rgba(91, 143, 82,.2);
     border-radius: 0px;
     color: white;
 }
 button.option-btn-selected:hover {
-	background-color: #6a916f;
+	background-color: rgba(97, 123, 92, 1);
 	color: white;
 /* 	border: 1px solid #7c977f; */
 	border-radius: 0px;
@@ -1284,16 +1289,17 @@ table.import-csv-table input[type=checkbox] {
 * Dialog
 */
 .dialog {
-    background: rgb(60, 82, 113);
+    background: rgba(43, 54, 72,0.97);
     padding: 5px 10px 5px 10px;
     /* max-width: 400px; */
     min-height: 10em;
     min-width: 20em;
     padding-top: 1.4em;
-    border-radius: 6px;
-    /* -webkit-box-shadow: 8px 8px 7px 2px rgba(149,165,166,0.68); */
-/*     -moz-box-shadow: 8px 8px 7px 2px rgba(149,165,166,0.68); */
-    /* box-shadow: 8px 8px 7px 2px rgba(149,165,166,0.68); */
+/*     border-radius: 1px; */
+	border: 1px solid rgba(85, 96, 121,0.1);
+    -webkit-box-shadow: 0px 0px 6px 0px rgb(85, 96, 121);
+    -moz-box-shadow: 0px 0px 6px 0px rgb(85, 96, 121);
+    box-shadow: 0px 0px 6px 0px rgb(85, 96, 121);
     text-align: center;
     color: white;
 }
@@ -1623,18 +1629,22 @@ div.progress {
 	overflow-y : auto;
 	width: 100%; 
 }
+#workspace-edit-settings .workspace-button button ,
 #workspace-edit-settings .workspace-list button {
-	width: 90%;
+    width: 90%;
     min-height: 35px;
     max-height: 45px;
-    margin: 0.1em;
+    margin-bottom: 0.2em;
+    font-size: .9em;
 }
-#workspace-edit-settings .workspace-list button.add-ws i {
-	font-size: 2em;
+#workspace-edit-settings .workspace-button button.add-ws  {
+	width: 60%;
 }
-#workspace-edit-settings .workspace-list button.add-ws {
-	color: #FFF;	
+#workspace-edit-settings .workspace-button button.add-ws i {
+	font-size: 1.5em;
+	color: #FFF;
 }
+
 #workspace-edit-settings .upload-progress-section {
 	display: none;
 }
