--- a/calc-webapp/src/main/webapp/css/calc/sampling-design/sampling-design.css
+++ b/calc-webapp/src/main/webapp/css/calc/sampling-design/sampling-design.css
@@ -50,8 +50,9 @@
 
 #sampling-design .row-hint {
 	background-color:  rgba(217, 203, 251, 0.05);
-	    border: 1px solid rgba(217, 203, 251, 0.05);
+	border: 1px solid rgba(217, 203, 251, 0.05);
     border-radius: 5px;
+    padding-top : 5px;
 }
 #sampling-design .col-hint {
 /* 	padding-top: 0px; */
