fixed sd import data

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -1328,6 +1328,12 @@ table.import-csv-table input[type=checkbox] {
 .float-left {
 	float: left;
 }
+.overflow-auto{
+	overflow: auto !important;
+}
+.overflow-hidden {
+	overflow: hidden !important;
+}
 /**
 * Dialog
 */
