fixed ext equation steps

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -466,8 +466,8 @@ button.settings:hover {
 	position: fixed;
 	right: 170px;
 	width: 320px;
-	background-color: #5b718c;
-	border: 1px solid #FFF;
+	background-color: rgba(91, 113, 140, 0.24);
+	border: 2px solid RGBA(185, 214, 251, 0.02);
 	height: 180px;
 	padding: 20px;
 	z-index: 2;
