--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -1107,19 +1107,22 @@ ul.scroll-menu {
 */
 #settings .settings-btn ,
 #settings .settings-btn:focus {
-    height: 100%;
+    /* height: 100%; */
     /* width: 18%; */
-    width: 15%;
+    /* width: 15%; */
+    width: 20rem;
+    height: 11rem;
     font-size: 1.1em;
-    /* font-weight: 200; */
     line-height: 2em;
     overflow: visible;
     border-radius: 0px;
     background-color: #5d616e;
-    border: none;
+    /* border: none; */
     letter-spacing: 0.03em;
     color: #d0d4d9;
+    border: 1px solid rgba(136, 153, 175, 0.1);
 }
+
 #settings .settings-btn:hover {
 	background-color: #676c7a;
 }
